--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Anisha",
+  "author": "Ritik Gupta",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
